objects/Value_Delivery_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Component_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiate And Confirm</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_Order__c</fullName>
        <label>Sequence Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Delivery_Session__c</fullName>
        <label>Value Delivery Session</label>
        <referenceTo>Value_Delivery_Session__c</referenceTo>
        <relationshipLabel>Objectives and Attendees for Participant</relationshipLabel>
        <relationshipName>Objectives_and_Attendees_for_Participant</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Objectives and Attendees for Participant</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Value Delivery Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives and Attendees for Participant</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>